apps/tikto/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tikto-dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/name: tikto
    app.kubernetes.io/environment: dev
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
