apps/tikto/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto
spec:
  template:
    spec:
      containers:
        - name: tikto
          image: ghcr.io/flavoriy/tikto-web:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-profile-api
spec:
  template:
    spec:
      containers:
        - name: profile-api
          image: ghcr.io/flavoriy/tikto-profile:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-tasks-api
spec:
  template:
    spec:
      containers:
        - name: tasks-api
          image: ghcr.io/flavoriy/tikto-tasks:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-calendar-api
spec:
  template:
    spec:
      containers:
        - name: calendar-api
          image: ghcr.io/flavoriy/tikto-calendar:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-dashboard-api
spec:
  template:
    spec:
      containers:
        - name: dashboard-api
          image: ghcr.io/flavoriy/tikto-dashboard:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto-gateway
spec:
  template:
    spec:
      containers:
        - name: gateway
          image: ghcr.io/flavoriy/tikto-gateway:dev-30-dd96f10c99da5b9f55ba10c5dfb56114887a4a80
