apps/tikto/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikto
spec:
  replicas: 1
