apps/tikto/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikto
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 300443
