apps/tikto/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tikto
spec:
  rules:
    - host: dev.tikto.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tikto
                port:
                  name: http
